--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,11 +5,16 @@
         <label for="Url">
             Url : 
         </label>
-        <input type="text" name="url" id="url">
+        <input type="text" name="url" id="url" placeholder="https://test.com/">
     </div>
     <button type="submit" class="ui blue labeled submit icon button">
         <i class="icon edit"></i> Send
     </button>
 </form>
 
+<% if(locals.message) { %>
+    <div class="ui message">
+        <%- message %>
+    </div>
+    <% } %>
 <%- include('footer') %>
