--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,10 @@
         <label for="Url">
             Url : 
         </label>
-        <input type="text" name="url" id="url" placeholder="https://test.com/">
+        <div style="display : flex">
+            <input type="text" name="url" id="url" placeholder="https://test.com/">
+            <input type="number" name="number_url" id="number_url" placeholder="20" style="width: 100px; margin-left: 10px;">
+        </div>
     </div>
     <button type="submit" class="ui blue labeled submit icon button">
         <i class="icon edit"></i> Send
